[gd_scene load_steps=35 format=3 uid="uid://bfakosfmklw3a"]

[ext_resource type="Script" path="res://array_lesson.gd" id="1_ejh55"]
[ext_resource type="Texture2D" uid="uid://ce3l1tus77wmd" path="res://spaceman/spaceman-walk-right.png" id="1_y8iok"]
[ext_resource type="Texture2D" uid="uid://bb8hg83nqnd1i" path="res://spaceman/spaceman-walk-left.png" id="2_qsjed"]
[ext_resource type="Texture2D" uid="uid://cjvywuw0iqmt4" path="res://spaceman/spaceman-walk-down-right.png" id="2_t3j4f"]
[ext_resource type="Texture2D" uid="uid://dih00016q8p47" path="res://arrays/border_q.png" id="5_kdi2s"]
[ext_resource type="FontFile" uid="uid://b5h3021wvch6l" path="res://assets/fonts/PixelifySans-VariableFont_wght.ttf" id="6_p0itl"]
[ext_resource type="Texture2D" uid="uid://ldnql0dqvise" path="res://Buttons/button.png" id="7_4fr17"]
[ext_resource type="Texture2D" uid="uid://dbwh62v83l2hr" path="res://Buttons/buttonpress.png" id="8_tffte"]
[ext_resource type="Texture2D" uid="uid://c83u0hgyso5r1" path="res://Buttons/button UI.png" id="9_r6rwx"]
[ext_resource type="Texture2D" uid="uid://dhkdgb2ltmuj6" path="res://arrays/debri.png" id="10_5ikjm"]
[ext_resource type="Script" path="res://character_body_2d.gd" id="11_us572"]
[ext_resource type="Texture2D" uid="uid://cmg5f8n30td2s" path="res://flappy/flappyShip.png" id="12_o2afy"]

[sub_resource type="Animation" id="Animation_jat38"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Color(0, 0, 0, 1)]
}

[sub_resource type="Animation" id="Animation_mshte"]
resource_name = "fade_in"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333334, 0.766667),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 1), Color(0, 0, 0, 0)]
}

[sub_resource type="Animation" id="Animation_lis36"]
resource_name = "fade_out"
length = 3.0
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("CanvasLayer/ColorRect:color")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0.0333333, 2),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Color(0, 0, 0, 0), Color(0, 0, 0, 1)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_jyamb"]
_data = {
"RESET": SubResource("Animation_jat38"),
"fade_in": SubResource("Animation_mshte"),
"fade_out": SubResource("Animation_lis36")
}

[sub_resource type="AtlasTexture" id="AtlasTexture_r8vut"]
atlas = ExtResource("2_t3j4f")
region = Rect2(0, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_nrk1h"]
atlas = ExtResource("2_qsjed")
region = Rect2(0, 0, 15, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xovyu"]
atlas = ExtResource("2_qsjed")
region = Rect2(15, 0, 15, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_c3vps"]
atlas = ExtResource("2_qsjed")
region = Rect2(30, 0, 15, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_pcknj"]
atlas = ExtResource("2_qsjed")
region = Rect2(45, 0, 15, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_e4fbw"]
atlas = ExtResource("1_y8iok")
region = Rect2(0, 0, 18, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_m7867"]
atlas = ExtResource("1_y8iok")
region = Rect2(18, 0, 18, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_xhjgt"]
atlas = ExtResource("1_y8iok")
region = Rect2(36, 0, 18, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_lu5c4"]
atlas = ExtResource("1_y8iok")
region = Rect2(54, 0, 18, 16)

[sub_resource type="SpriteFrames" id="SpriteFrames_g25fj"]
animations = [{
"frames": [],
"loop": true,
"name": &"dead",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_r8vut")
}],
"loop": true,
"name": &"idle",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_nrk1h")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xovyu")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_c3vps")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_pcknj")
}],
"loop": true,
"name": &"walk_left",
"speed": 5.0
}, {
"frames": [{
"duration": 1.0,
"texture": SubResource("AtlasTexture_e4fbw")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_m7867")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_xhjgt")
}, {
"duration": 1.0,
"texture": SubResource("AtlasTexture_lu5c4")
}],
"loop": true,
"name": &"walk_right",
"speed": 5.0
}]

[sub_resource type="AtlasTexture" id="AtlasTexture_tx51m"]
atlas = ExtResource("9_r6rwx")
region = Rect2(16, 0, 16, 16)

[sub_resource type="AtlasTexture" id="AtlasTexture_31cnl"]
atlas = ExtResource("9_r6rwx")
region = Rect2(16, 0, 16, 16)

[sub_resource type="Animation" id="Animation_171kb"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(531, -99)]
}

[sub_resource type="Animation" id="Animation_yjtoe"]
resource_name = "fall_to_player"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("..:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(531, -99)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_3exb3"]
_data = {
"RESET": SubResource("Animation_171kb"),
"fall_to_player": SubResource("Animation_yjtoe")
}

[sub_resource type="Animation" id="Animation_s0yb6"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(525, -329)]
}

[sub_resource type="Animation" id="Animation_0xbow"]
resource_name = "alien_attack"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath(".:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(525, -329), Vector2(525, 230)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_1o88t"]
_data = {
"RESET": SubResource("Animation_s0yb6"),
"alien_attack": SubResource("Animation_0xbow")
}

[node name="ArrayLesson" type="Node2D"]
texture_filter = 1
script = ExtResource("1_ejh55")

[node name="CanvasLayer" type="CanvasLayer" parent="."]

[node name="ColorRect" type="ColorRect" parent="CanvasLayer"]
offset_left = -88.0
offset_top = -5.0
offset_right = 1235.0
offset_bottom = 1962.0
mouse_filter = 2
color = Color(0, 0, 0, 1)

[node name="fade" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_jyamb")
}

[node name="AnimatedSprite2D" type="AnimatedSprite2D" parent="."]
texture_filter = 1
position = Vector2(185.367, 879)
scale = Vector2(6.07917, 6)
sprite_frames = SubResource("SpriteFrames_g25fj")
animation = &"idle"

[node name="TextureRect" type="TextureRect" parent="."]
offset_top = 1198.0
offset_right = 1081.0
offset_bottom = 1917.0
texture = ExtResource("5_kdi2s")

[node name="RichTextLabel" type="RichTextLabel" parent="TextureRect"]
texture_filter = 1
layout_mode = 0
offset_left = 116.0
offset_top = 113.0
offset_right = 975.0
offset_bottom = 598.0
theme_override_fonts/normal_font = ExtResource("6_p0itl")
theme_override_font_sizes/normal_font_size = 60
text = "Oh no! the facility is  breaking
Help identify where the hero should go to avoid falling obstacles , using your knowledge of arrays!"

[node name="MAKE_CHOICE" type="TextureButton" parent="."]
offset_left = 411.0
offset_top = 915.0
offset_right = 670.0
offset_bottom = 1171.0
texture_normal = ExtResource("7_4fr17")
texture_pressed = ExtResource("8_tffte")

[node name="RichTextLabel" type="RichTextLabel" parent="MAKE_CHOICE"]
texture_filter = 1
layout_mode = 0
offset_left = 81.0
offset_top = 83.0
offset_right = 187.0
offset_bottom = 170.0
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("6_p0itl")
theme_override_font_sizes/normal_font_size = 30
text = "MAKE
CHOICE"

[node name="Next" type="TextureButton" parent="."]
texture_filter = 1
offset_left = 784.0
offset_top = 956.0
offset_right = 990.0
offset_bottom = 1165.0
texture_normal = SubResource("AtlasTexture_tx51m")
stretch_mode = 0

[node name="Back" type="TextureButton" parent="."]
texture_filter = 1
offset_left = 306.0
offset_top = 1153.0
offset_right = 522.0
offset_bottom = 1352.0
rotation = 3.14159
texture_normal = SubResource("AtlasTexture_31cnl")
stretch_mode = 0
flip_v = true

[node name="ScoreLabel" type="RichTextLabel" parent="."]
texture_filter = 1
offset_left = 411.0
offset_top = 777.0
offset_right = 661.0
offset_bottom = 939.0
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("6_p0itl")
theme_override_font_sizes/normal_font_size = 70
text = "Lives: 3"

[node name="FeedbackLabel" type="RichTextLabel" parent="."]
texture_filter = 1
offset_left = 444.0
offset_top = 848.0
offset_right = 675.0
offset_bottom = 954.0
mouse_filter = 2
theme_override_fonts/normal_font = ExtResource("6_p0itl")
theme_override_font_sizes/normal_font_size = 30
text = "
"

[node name="spaceGuy" type="Sprite2D" parent="."]
position = Vector2(531, -99)
scale = Vector2(7.85, 9.4)
texture = ExtResource("10_5ikjm")

[node name="CharacterBody2D" type="CharacterBody2D" parent="spaceGuy"]
script = ExtResource("11_us572")

[node name="AnimationPlayer" type="AnimationPlayer" parent="spaceGuy/CharacterBody2D"]
libraries = {
"": SubResource("AnimationLibrary_3exb3")
}

[node name="alien" type="Sprite2D" parent="."]
position = Vector2(525, -329)
scale = Vector2(26, 21.725)
texture = ExtResource("12_o2afy")

[node name="AnimationPlayer" type="AnimationPlayer" parent="alien"]
libraries = {
"": SubResource("AnimationLibrary_1o88t")
}

[connection signal="pressed" from="MAKE_CHOICE" to="." method="_on_MakeChoice_pressed"]
[connection signal="pressed" from="Next" to="." method="_on_Next_pressed"]
[connection signal="pressed" from="Back" to="." method="_on_Back_pressed"]
